# TaintAnalysisCpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  low-parallel-run_analysis.sh  multi-func-run_analysis.sh  multi-taint-run_analysis.sh  prog.sc  prog2.sc  run_analysis.sh  sc.g4
.antlr/: sc.interp  scLexer.interp
.github/workflows/: CI.yml
benchmark-scripts/: low-parallel-run_analysis.bat  low-parallel-run_analysis.sh  multiplefunc-run_analysis.bat  multiplefunc-run_analysis.sh  multitaint-multiplefunc-run_analysis.bat  multitaint-multiplefunc-run_analysis.sh  run-benchmark-sampleprograms.bat  run-benchmark-sampleprograms.sh
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
sampleprograms/: low-parallel.sc  medium-size-program.sc  multiplefunc.sc  small-array-sample.sc  taint-into-param-test.sc
sampleprograms/low-parallel/: low-parallel_100.sc  low-parallel_1200.sc  low-parallel_1400.sc  low-parallel_20.sc  low-parallel_200.sc  low-parallel_2000.sc  low-parallel_300.sc  low-parallel_3000.sc  low-parallel_4000.sc  low-parallel_80.sc  low-parallel_800.sc  low-parallel_8000.sc  low-parallel_90.sc  low-parallel_900.sc
sampleprograms/lowparallel/: low-parallel_1.sc  low-parallel_10.sc  low-parallel_1000.sc  low-parallel_10000.sc  low-parallel_1100.sc  low-parallel_1300.sc  low-parallel_150.sc  low-parallel_1500.sc  low-parallel_250.sc  low-parallel_30.sc  low-parallel_350.sc  low-parallel_40.sc  low-parallel_400.sc  low-parallel_450.sc  low-parallel_5.sc  low-parallel_50.sc  low-parallel_500.sc  low-parallel_5000.sc  low-parallel_60.sc  low-parallel_600.sc  low-parallel_6000.sc  low-parallel_70.sc  low-parallel_700.sc  low-parallel_7000.sc  low-parallel_9000.sc
sampleprograms/multiplefunc/: multiplefunc_1.sc  multiplefunc_10.sc  multiplefunc_100.sc  multiplefunc_1000.sc  multiplefunc_10000.sc  multiplefunc_1100.sc  multiplefunc_1200.sc  multiplefunc_1300.sc  multiplefunc_1400.sc  multiplefunc_150.sc  multiplefunc_1500.sc  multiplefunc_20.sc  multiplefunc_200.sc  multiplefunc_2000.sc  multiplefunc_250.sc  multiplefunc_30.sc  multiplefunc_300.sc  multiplefunc_3000.sc  multiplefunc_350.sc  multiplefunc_40.sc  multiplefunc_400.sc  multiplefunc_4000.sc  multiplefunc_450.sc  multiplefunc_5.sc  multiplefunc_50.sc  multiplefunc_500.sc  multiplefunc_5000.sc  multiplefunc_60.sc  multiplefunc_600.sc  multiplefunc_6000.sc  multiplefunc_70.sc  multiplefunc_700.sc  multiplefunc_7000.sc  multiplefunc_80.sc  multiplefunc_800.sc  multiplefunc_8000.sc  multiplefunc_90.sc  multiplefunc_900.sc  multiplefunc_9000.sc
src/: Expression.h  GpuManagement.cu  GpuManagement.h  base_analysis.h  base_multi_taint_analysis.h  base_taint_analysis.h  bit_vector.cpp  bit_vector.h  cfg.h  cfg_clone.h  cfg_parsing.cpp  cfg_transformers.cpp  digraph.cpp  digraph.h  dynamic_array.h  kernel.cu  kernel.h  main.cpp  matrix.cpp  matrix.h  matrix_analysis.cu  matrix_analysis.h  multi_taint_analysis.cpp  multi_taint_analysis.h  pinned_mem.cu  pinned_mem.h  plot.py  taint_analysis.cpp  taint_analysis.h  timing.cpp  timing.h  transferfunction.cpp  transforms.h  transforms_matrix.h  var_visitor.h  variable_reduction.h  worklist.cpp  worklist.h
src/antlr4-runtime/: sc.interp  sc.tokens  scBaseListener.cpp  scBaseListener.h  scBaseVisitor.cpp  scBaseVisitor.h  scLexer.cpp  scLexer.h  scLexer.interp  scLexer.tokens  scListener.cpp  scListener.h  scParser.cpp  scParser.h  scVisitor.cpp  scVisitor.h
src/bit_cuda/: analysis.cu  analysis.h  bit_cuda_transformer.h  bit_cuda_transforms.h  bit_vector_converter.h
src/cfg/: Expression.h  cfg.cpp  cfg.h  digraph.cpp  digraph.h  sc_transformer.cpp  sc_transformer.h
src/cfg/transformations/: analysis_converter.cpp  analysis_converter.h  cfg_clone.h  cfg_transformers.cpp  get_taint_sources.h  taint_locator.cpp  taint_locator.h  transforms_matrix.h  var_visitor.h  variable_deducer.h  variable_reduction.h
src/cubool/: GpuBoolMatrix.cpp  GpuBoolMatrix.h  analysis.h  bool_matrix.cpp  bool_matrix.h  cubool_analysis.cpp  transforms_matrix.h
src/cuda/: bit_vector_converter.cpp  bit_vector_converter.h  common.h  cuda_common.cu  cuda_common.cuh  cuda_data.h  cuda_transformer.cpp  cuda_transformer.h  digraph.h  sc_transformer.h
src/cuda/bit_cuda/: analysis.cu  analysis.h
src/cuda/cuda_worklist/: analysis.cu  analysis.h  new_analysis.cu
src/cuda/multi_cuda/: analysis.cu  analysis.h  new_analysis.cu  transformer.h
src/cuda/worklist/: analysis.cu  analysis.cuh  worklist.cuh
src/cuda_worklist/: analysis.cu  analysis.h  cuda_worklist_transformer.h
src/divided_bit_cuda/: divisor.h
tests/: main.cpp  test_cpu.cpp  test_gpu.cpp  test_transforms_matrix.cpp
